tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__HeavyDutyRocketE-AAAAAAAAAAAAAAAAAAAKkQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2705,
  "prerequisites": [
    2704
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Every rocket needs a rocket engine. A heavy one tier 3 is needed in the tier 7 and 8 rockets.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Heavy Duty Rocket Engine Tier 4",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2704
  ],
  "rewards": [],
  "tasks": []
}
