tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__HeavyRocketFins-AAAAAAAAAAAAAAAAAAAFsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1459,
  "prerequisites": [
    1453
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Every rocket needs a few rocket fins. Tier 3 rockets need heavy ones.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Heavy Rocket Fins",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1453
  ],
  "rewards": [],
  "tasks": []
}
