tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Helium3andSaltwa-AAAAAAAAAAAAAAAAAAAGzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1742,
  "prerequisites": [
    810
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Moon is rich in Helium 3 because the Sun has been embedding it in the upper layer of moon by the solar wind over billions of years.\n\nSalt water is also available in smaller quantities. You can get chlorine out of it. You will want plenty of chlorine for processing Rutile to get Titanium.\n\nThere are more planets and moons with gas and fluids underneath the surface. Bring along a multiblock fluid drill to recover these fluids.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHelium 3 and Saltwater on Moon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    810
  ],
  "rewards": [],
  "tasks": []
}
