tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__HowDoYouEvenPron-AAAAAAAAAAAAAAAAAAAKhA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2692,
  "optional_prerequisites": [
    2693
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "To make Phthalic Anhydride, use a dehydrator.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHow Do You Even Pronounce This?",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
