tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__HydrogenPeroxide-AAAAAAAAAAAAAAAAAAAJXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2396,
  "prerequisites": [
    2690,
    854
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make Hydrogen Peroxide you combine Oxygen (or Air), 2-Ethylanthrahydroquinone, and Anthracene in a Chemical Plant.\n\n[note]You can fully recycle the 2-Ethylanthraquinone, so don't make a bunch of it.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHydrogen Peroxide",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2690,
    854
  ],
  "rewards": [],
  "tasks": []
}
